[project]
name = "test-service-at-hotel-level"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex X",email = "dowsha@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==4.2)",
    "djangorestframework (==3.14.0)",
    "ruff (==0.3.5)",
    "pre-commit (==3.6.2)",
    "pytest (==7.4.4)",
    "pytest-django (==4.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
